==> uYanki/emkit/ch32v307vct6/2_software/cherryusb/usbd_msc_exflash_fafts/User/spi_flash.c <==
#include "SPI_Flash.h"
#define SIZE    sizeof(TEXT_Buf)
#define SPI_CS_GPIO_Port GPIOA
#define SPI_CS_Pin       GPIO_Pin_2

void SPI_Flash_Init(void)
{
    GPIO_InitTypeDef GPIO_InitStructure = {0};
    SPI_InitTypeDef  SPI_InitStructure = {0};

    RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOA | RCC_APB2Periph_SPI1, ENABLE);

    GPIO_InitStructure.GPIO_Pin = SPI_CS_Pin;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_Init(SPI_CS_GPIO_Port, &GPIO_InitStructure);
    GPIO_SetBits(SPI_CS_GPIO_Port, SPI_CS_Pin);

    GPIO_InitStructure.GPIO_Pin = GPIO_Pin_5;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_Init(GPIOA, &GPIO_InitStructure);

    GPIO_InitStructure.GPIO_Pin = GPIO_Pin_6;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN_FLOATING;
    GPIO_Init(GPIOA, &GPIO_InitStructure);

    GPIO_InitStructure.GPIO_Pin = GPIO_Pin_7;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_Init(GPIOA, &GPIO_InitStructure);

    SPI_InitStructure.SPI_Direction = SPI_Direction_2Lines_FullDuplex;
    SPI_InitStructure.SPI_Mode = SPI_Mode_Master;
    SPI_InitStructure.SPI_DataSize = SPI_DataSize_8b;
    SPI_InitStructure.SPI_CPOL = SPI_CPOL_High;
    SPI_InitStructure.SPI_CPHA = SPI_CPHA_2Edge;
    SPI_InitStructure.SPI_NSS = SPI_NSS_Soft;
    SPI_InitStructure.SPI_BaudRatePrescaler = SPI_BaudRatePrescaler_4;
    SPI_InitStructure.SPI_FirstBit = SPI_FirstBit_MSB;
    SPI_InitStructure.SPI_CRCPolynomial = 7;
    SPI_Init(SPI1, &SPI_InitStructure);

    SPI_Cmd(SPI1, ENABLE);
}

void SPI_FLASH_Write_Enable(void)
{
    GPIO_WriteBit(SPI_CS_GPIO_Port, SPI_CS_Pin, 0);
    SPI1_ReadWriteByte(W25X_WriteEnable);
    GPIO_WriteBit(SPI_CS_GPIO_Port, SPI_CS_Pin, 1);
}

u16 SPI_Flash_ReadID(void)
{
    u16 Temp = 0;

    GPIO_WriteBit(SPI_CS_GPIO_Port, SPI_CS_Pin, 0);
    SPI1_ReadWriteByte(W25X_ManufactDeviceID);
    SPI1_ReadWriteByte(0x00);
    SPI1_ReadWriteByte(0x00);
    SPI1_ReadWriteByte(0x00);
    Temp |= SPI1_ReadWriteByte(0xFF) << 8;
    Temp |= SPI1_ReadWriteByte(0xFF);
    GPIO_WriteBit(SPI_CS_GPIO_Port, SPI_CS_Pin, 1);

    return Temp;
}

void SPI_Flash_PowerDown(void)
{
    GPIO_WriteBit(SPI_CS_GPIO_Port, SPI_CS_Pin, 0);
    SPI1_ReadWriteByte(W25X_PowerDown);
    GPIO_WriteBit(SPI_CS_GPIO_Port, SPI_CS_Pin, 1);
    Delay_Us(3);
}

void SPI_Flash_WAKEUP(void)
{
    GPIO_WriteBit(SPI_CS_GPIO_Port, SPI_CS_Pin, 0);
    SPI1_ReadWriteByte(W25X_ReleasePowerDown);
    GPIO_WriteBit(SPI_CS_GPIO_Port, SPI_CS_Pin, 1);
    Delay_Us(3);
}
